--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@devheniik/datepicker",
-  "version": "0.0.0-beta.9",
+  "name": "@vuepic/vue-datepicker",
+  "version": "4.3.0",
   "description": "Datepicker component for Vue 3",
-  "author": "Vuepic && Devheniik",
+  "author": "Vuepic",
   "private": false,
   "license": "MIT",
+  "homepage": "https://vue3datepicker.com",
   "types": "index.d.ts",
   "type": "module",
   "main": "dist/vue-datepicker.umd.cjs",
@@ -15,8 +16,10 @@
   "sass": "src/VueDatePicker/style/main.scss",
   "files": [
     "dist/*",
-    "package.json",
-    "index.d.ts"
+    "src/**/*",
+    "index.d.ts",
+    "LICENSE",
+    "README.md"
   ],
   "exports": {
     ".": {
@@ -37,7 +40,7 @@
     "build": "run-s clean build:lib build:css",
     "clean": "rimraf ./dist",
     "build:lib": "run-s typecheck build:es build:browser",
-    "typecheck": "vue-tsc --noEmit",
+    "typecheck": "vue-tsc --noEmit -p tsconfig.type-check.json --composite false",
     "build:es": "cross-env NODE_ENV=production vite build --mode production",
     "build:browser": "cross-env NODE_ENV=production vite -f iife build --mode production",
     "build:css": "cross-env NODE_ENV=production node_modules/.bin/sass src/VueDatePicker/style/main.scss dist/main.css --style compressed",
@@ -49,40 +52,42 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
-    "@types/jsdom": "^20.0.0",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitest/coverage-c8": "^0.29.8",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.2.1",
+    "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.1.3",
-    "c8": "^7.12.0",
+    "c8": "^7.13.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.7.0",
-    "jsdom": "^20.0.2",
-    "minimist": "^1.2.7",
+    "eslint-plugin-vue": "^9.10.0",
+    "jsdom": "^21.1.1",
+    "minimist": "^1.2.8",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.1.0",
-    "stylelint": "^14.14.0",
-    "stylelint-config-standard-scss": "^6.0.0",
-    "terser": "^5.15.1",
-    "typescript": "^4.8.4",
-    "vite": "^3.2.2",
-    "vitest": "^0.24.5",
-    "vue": "^3.2.41",
-    "vue-tsc": "^1.0.9"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "rimraf": "^4.4.1",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.2",
+    "stylelint": "^15.4.0",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "terser": "^5.16.8",
+    "typescript": "^4.9.5",
+    "vite": "^4.2.1",
+    "vitest": "^0.29.8",
+    "vue": "^3.2.47",
+    "vue-tsc": "^1.2.0"
   },
   "dependencies": {
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7"
   },
   "peerDependencies": {
     "vue": ">=3.2.0"
@@ -92,11 +97,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Vuepic/vue-datepicker.git"
+    "url": "https://github.com/Vuepic/vue-datepicker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Vuepic/vue-datepicker/issues"
   },
   "keywords": [
-    "vue",
     "vue-datepicker",
+    "vue",
     "datepicker",
     "date",
     "vue3-datepicker",
@@ -107,12 +115,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "bugs": {
-    "url": "https://github.com/Vuepic/vue-datepicker/issues"
-  },
-  "directories": {
-    "doc": "docs",
-    "test": "tests"
-  }
+  ]
 }
