--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@vuepic/vue-datepicker",
-  "version": "4.3.0",
+  "name": "@devheniik/datepicker",
+  "version": "0.0.0-beta.10",
   "description": "Datepicker component for Vue 3",
-  "author": "Vuepic",
+  "author": "Vuepic && Devheniik",
   "private": false,
   "license": "MIT",
-  "homepage": "https://vue3datepicker.com",
   "types": "index.d.ts",
   "type": "module",
   "main": "dist/vue-datepicker.umd.cjs",
